fix: 비디오 z-index 삭제

--- a/html_and_css/Video.css
+++ b/html_and_css/Video.css
@@ -85,7 +85,7 @@ nav{
     position: sticky;
     top: 0;
     text-align: center;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .primary{
